--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
             both warehouse and fast-food environments, I am confident in 
             my ability to thrive in any team-oriented work environment. 
             Throughout my career, I have consistently demonstrated a strong 
-            work ethic and a passion for delivering exceptional results.</p>
+            work ethic and a passion for delivering exceptional results.My experience working in a warehouse has taught me the 
+            importance of attention to detail and time management.</p>
             
-            <p>My experience working in a warehouse has taught me the 
-            importance of attention to detail and time management. I have 
-            developed strong organisational and problem- solving skills, as 
+            <p>I have developed strong organisational and problem- solving skills, as 
             well as the ability to multitask effectively in a fast-paced 
             environment. I understand the importance of prioritising tasks 
             and meeting deadlines, while maintaining a focus on quality and 
